# research-repo-doctor

./: .gitignore  .rrdoctor-badge.json  .rrdoctor.yml  AGENTS.md  APPLICATION_READY.md  CHANGELOG.md  CITATION.cff  CODEX_FOR_OSS_APPLICATION_PACKET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIB_awesome_entry.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_negative.yml  false_positive.yml  feature_request.yml  rule_request.yml  scan_case.yml  trial_report.yml
.github/workflows/: action-smoke-test.yml  ci.yml  joss-paper.yml  release.yml
demo/: README.md  app.py  requirements.txt
docs/: MAKING_THE_GIF.md  ae-chair-guide.md  ae-deadline-workflow.md  agent-workflows.md  autofix.md  checks.md  codex-for-oss-application.md  configuration.md  corpus-data-brief.md  demo.tape  evaluation-corpus.md  faq.md  feedback.md  github-action.md  index.md  initial-issues.md  launch-checklist.md  maintainer-workflows.md  mcp.md  pre-commit.md  pull-request-automation.md  pypi-publishing.md  quickstart.md  report-format.md  research-reproducibility.md  rule-authoring.md
docs/case-studies/: nanogpt.md
evaluation/: README.md  corpus.yml
evaluation/reviews/: README.md  alphafold.yml  archr.yml  arviz.yml  astropy.yml  bert.yml  big-vision.yml  biopython.yml  brax.yml  clip.yml  clusterprofiler.yml  dada2.yml  detectron2.yml  detr.yml  differentialequations-jl.yml  dino.yml  dinov2.yml  distributions-jl.yml  dynamicalsystems-jl.yml  esm.yml  faiss.yml  flux-jl.yml  generative-models.yml  graphcast.yml  guided-diffusion.yml  images-jl.yml  improved-diffusion.yml  instant-ngp.yml  jax.yml  keras.yml  latent-diffusion.yml  long-range-arena.yml  mae.yml  mdanalysis.yml  mmdetection.yml  mne-python.yml  monocle3.yml  nanogpt.yml  nerfstudio.yml  networkx.yml  (+41 more)
examples/: github-workflow.yml  pr-comment-workflow.yml  rrdoctor.yml
examples/minimal-research-project/: README.md
examples/minimal-research-project/scripts/: reproduce.sh
examples/ml-paper-repo/: CITATION.cff  README.md  pyproject.toml
examples/ml-paper-repo/data/: README.md
examples/ml-paper-repo/results/: README.md
examples/ml-paper-repo/scripts/: train.py
examples/reports/: fix-plan.md  healthy-report.md  missing-basics-report.md  report.json  report.sarif  self-scan-report.md
examples/unseeded-ml-repo/: README.md  pyproject.toml
examples/unseeded-ml-repo/scripts/: train.py
integrations/: README.md
integrations/agent-skills/: README.md
integrations/agent-skills/rrdoctor-verify/: SKILL.md
integrations/cursor/: rrdoctor-verify.mdc
integrations/github-copilot/: copilot-instructions.md
paper/: README.md  paper.bib  paper.md
scripts/: check.py  check_live_demo.py  check_public_readiness.py  check_zenodo_metadata.py  make_demo_gif.py  scan_corpus.py
src/rrdoctor/: __init__.py  __main__.py  baseline.py  cli.py  config.py  fixers.py  mcp_server.py  models.py  readiness.py  scanner.py  scoring.py  verification.py
src/rrdoctor/reporting/: agent.py  appendix.py  badge.py  json_report.py  markdown.py  sarif.py
src/rrdoctor/rules/: __init__.py  base.py  ci.py  citation.py  data.py  environment.py  experiments.py  governance.py  license.py  notebooks.py  paths.py  project_metadata.py  readme.py  registry.py  release.py  security.py  tests.py
tests/: test_action_metadata.py  test_appendix_and_verify.py  test_appendix_badge_preflight.py  test_baseline.py  test_check_script.py  test_cli.py  test_config.py  test_corpus_runner.py  test_demo_app.py  test_docs_links.py  test_fixers.py  test_live_demo_check.py  test_mcp_registry_metadata.py  test_mcp_server.py  test_plan_badge.py  test_profiles.py  test_public_hygiene.py  test_public_readiness_script.py  test_readiness.py  test_registry.py  test_reporting.py  test_rules_citation.py  test_rules_environment.py  test_rules_experiments.py  test_rules_extra.py  test_rules_notebooks.py  test_rules_readme.py  test_rules_release.py  test_rules_security.py  test_scanner.py  test_version_consistency.py  test_zenodo_metadata_check.py
tests/fixtures/healthy-research-repo/: CITATION.cff  README.md  pyproject.toml
tests/fixtures/ml-project-repo/: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
(+13 files in other folders)
