[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "rrdoctor"
version = "0.1.0"
description = "Local-first reproducibility audits for research code repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Repo Doctor Maintainers" }]
keywords = [
  "research",
  "reproducibility",
  "open-source",
  "github-action",
  "notebooks",
  "citation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "nbformat>=5.9",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
rrdoctor = "rrdoctor.cli:app"

[project.urls]
Homepage = "https://github.com/Tom409114/research-repo-doctor"
Documentation = "https://github.com/Tom409114/research-repo-doctor/tree/main/docs"
Issues = "https://github.com/Tom409114/research-repo-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rrdoctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
packages = ["rrdoctor"]
warn_unused_configs = true
strict = true
