[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "rrdoctor"
version = "0.2.14"
description = "Get your research artifact reviewer-ready before you submit: reproducibility audits, dynamic verify, auto-fix, an agent-ready fix plan, and an ACM/NeurIPS Artifact Appendix generator."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Repo Doctor Maintainers" }]
keywords = [
  "research",
  "reproducibility",
  "artifact-evaluation",
  "open-source",
  "github-action",
  "notebooks",
  "citation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "nbformat>=5.9",
  "PyYAML>=6.0",
  "rich>=13.7",
  "tomli>=2.0; python_version < '3.11'",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "Pillow>=10.0",
  "pytest>=8.0",
  "ruff>=0.5",
  "tomli>=2.0",
  "types-PyYAML>=6.0",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
rrdoctor = "rrdoctor.cli:app"

[project.urls]
Homepage = "https://github.com/Tom409114/research-repo-doctor"
Documentation = "https://github.com/Tom409114/research-repo-doctor/tree/main/docs"
Repository = "https://github.com/Tom409114/research-repo-doctor"
Issues = "https://github.com/Tom409114/research-repo-doctor/issues"
Changelog = "https://github.com/Tom409114/research-repo-doctor/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rrdoctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
packages = ["rrdoctor"]
warn_unused_configs = true
strict = true

# The MCP server is an optional integration whose third-party dependency is not
# installed in the base/CI environment and ships no type stubs. Skip it here; it
# is import-guarded at runtime and covered behind the `mcp` extra.
[[tool.mypy.overrides]]
module = "rrdoctor.mcp_server"
ignore_errors = true
